// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  margin: 0 auto;
  max-width: 1100px;
  padding-left: var(--spacing-responsive-md);
  padding-right: var(--spacing-responsive-md);
  width: 100%;
}

<div
  className="c0"
>
  Test
</div>
`;

exports[`renders correctly 2`] = `
.c0 {
  margin: 0 auto;
  max-width: 1100px;
  padding-left: var(--spacing-responsive-md);
  padding-right: var(--spacing-responsive-md);
  width: 100%;
  padding-left: 0;
  padding-right: 0;
}

<div
  className="c0"
>
  Test
</div>
`;

exports[`renders correctly 3`] = `
.c0 {
  height: 100%;
  margin: 0 auto;
  max-width: 1100px;
  padding-left: var(--spacing-responsive-md);
  padding-right: var(--spacing-responsive-md);
  width: 100%;
}

<div
  className="c0"
>
  Test
</div>
`;

exports[`renders correctly 4`] = `
.c0 {
  margin: 0 auto;
  max-width: 1100px;
  padding-left: var(--spacing-responsive-md);
  padding-right: var(--spacing-responsive-md);
  width: 100%;
  padding-bottom: var(--spacing-responsive-md);
  padding-top: var(--spacing-responsive-md);
}

<div
  className="c0"
>
  Test
</div>
`;
